--- a/package.json
+++ b/package.json
@@ -41,11 +41,6 @@
     "css-loader": "^0.26.1",
     "del": "^2.2.1",
     "devtron": "^1.1.0",
-    "electron": "^1.3.1",
-    "electron-debug": "^1.1.0",
-    "electron-devtools-installer": "^2.0.1",
-    "electron-packager": "^8.5.0",
-    "electron-rebuild": "^1.1.3",
     "babel-eslint": "^7.0.0",
     "eslint": "^3.13.1",
     "eslint-friendly-formatter": "^2.0.5",
@@ -82,7 +77,12 @@
     "vue-style-loader": "^1.0.0",
     "vue-template-compiler": "^2.1.10",
     "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.2.0"
+    "webpack-dev-server": "^2.2.0",
+	"electron": "^1.3.1",
+    "electron-debug": "^1.1.0",
+    "electron-devtools-installer": "^2.0.1",
+    "electron-packager": "^8.5.0",
+    "electron-rebuild": "^1.1.3"
   },
   "dependencies": {}
 }
